# Uranus

./: .gitignore  CMakeLists.txt  README.md  config.json  uranus.cpp
cmake/: UranusConfig.cmake.in
config/: server.yaml
deprecated/base/: CrossRoute.cpp  CrossRoute.h  CrossRouteCodec.h  CrossRouteHandler.h
deprecated/base/impl/: CrossRouteCodecImpl.cpp  CrossRouteCodecImpl.h
deprecated/server/: server.cpp
deprecated/server/command/: CommandManager.cpp  CommandManager.h
deprecated/server/common/: ProtoType.h  manager.def.h  misc.h  proto.def.h
deprecated/server/config/: AvatarLogicConfig.cpp  AvatarLogicConfig.h
deprecated/server/impl/: CrossRouteHandlerImpl.cpp  CrossRouteHandlerImpl.h
impl/: Handler.cpp  Handler.h  LoginHandler.cpp  LoginHandler.h  LoginHandlerImpl.cpp  LoginHandlerImpl.h  Packet.cpp  Packet.h  PacketCodec.cpp  PacketCodec.h  ServerHandlerImpl.cpp  ServerHandlerImpl.h
protobuf/def/: appearance.proto  chat.proto  login.proto
script/: sql.py
scripts/: third_libs_install.bat  third_libs_install.sh
scripts/DBTool-src/: read_struct.py  update.py
scripts/PreBuildTool-src/: main.py  proto.py  sql.py  xlsx2json.py
scripts/client/: client.py  package.py
server/: GameServer.cpp  GameServer.h  game_server.cpp  game_server.h  server.h
server/common/: Event.h  ProtoType.h  config.def.h  event.h  logger.def.h  manager.def.h  proto.def.h  proto_type.h
server/gameplay/special_scene/: floating_coffin.cpp  floating_coffin.h
server/impl/: ConnectionHandler.cpp  ConnectionHandler.h  ConnectionHandlerImpl.cpp  ConnectionHandlerImpl.h  LoginHandler.cpp  LoginHandler.h  LoginHandlerImpl.cpp  LoginHandlerImpl.h  ProtocolHandler.cpp  ProtocolHandler.h  ProtocolHandlerImpl.cpp  ProtocolHandlerImpl.h  connection_handler.cpp  connection_handler.h  login_handler.cpp  login_handler.h  proto_handler.cpp  proto_handler.h  protocol_handler.cpp  protocol_handler.h
server/player/: CacheNode.h  ComponentModule.cpp  ComponentModule.h  EventModule.cpp  EventModule.h  Player.cpp  Player.h  PlayerComponent.cpp  PlayerComponent.h  PlayerManager.cpp  PlayerManager.h  cache_node.h  component_module.cpp  component_module.h  event_module.cpp  event_module.h  player.cpp  player.h  player_component.cpp  player_component.h  player_manager.cpp  player_manager.h
service/agent/: CMakeLists.txt  ComponentModule.cpp  ComponentModule.h  LoadProtocol.h  Player.cpp  Player.h  PlayerComponent.cpp  PlayerComponent.h  ProtoRoute.cpp  ProtoRoute.h
service/gameworld/: CMakeLists.txt  GameWorld.cpp  GameWorld.h  LoadProtocol.h  Manager.cpp  ProtoRoute.cpp  ProtoRoute.h  manager.h  proto_route.cc  proto_route.h
src/: ByteArray.cpp  ByteArray.h  Context.cpp  Context.h  DataAsset.cpp  DataAsset.h  IDAllocator.cpp  IDAllocator.h  IdentAllocator.h  LibraryNode.cpp  LibraryNode.h  Module.cpp  Module.h  Object.cpp  Object.h  Package.h  PackageInterface.h  Recyclable.cpp  Recyclable.h  RecycleInterface.cpp  RecycleInterface.h  Recycler.cpp  Recycler.h  Server.cpp  Server.h  ServerHandler.h  ServiceHandle.cpp  ServiceHandle.h  Types.h  Utils.cpp  Utils.h  common.h  utils.cpp  utils.h
src/Config/: Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  LogicConfig.h
src/Database/: DataAccess.cpp  DataAccess.h  DatabaseTask.cpp  DatabaseTask.h  Deserializer.cpp  Deserializer.h  Entity.cpp  Entity.h  EntityArray.h  EntityResult.cpp  EntityResult.h  Serializer.cpp  Serializer.h
src/Event/: Event.cpp  Event.h  EventInterface.cpp  EventInterface.h  EventModule.cpp  EventModule.h  EventParam.h
src/Gateway/: Gateway.cpp  Gateway.h  PlayerAgent.cpp  PlayerAgent.h
src/Internal/: Packet.cpp  Packet.h  PacketCodec.cpp  PacketCodec.h
src/Logger/: LoggerModule.cpp  LoggerModule.h
src/Login/: LoginAuth.cpp  LoginAuth.h  LoginHandler.cpp  LoginHandler.h
src/Monitor/: Argument.cpp  Argument.h  Monitor.cpp  Monitor.h  Plugin.cpp  Plugin.h  Watchdog.cpp  Watchdog.h
src/Network/: Connection.cpp  Connection.h  Network.cpp  Network.h  PackageCodec.cpp  PackageCodec.h
src/Reflect/: Clazz.cpp  Clazz.h  ClazzFactory.cpp  ClazzFactory.h  ClazzField.cpp  ClazzField.h  ClazzMethod.cpp  ClazzMethod.h  Object.cpp  Object.h
src/Service/: LibraryHandle.cpp  LibraryHandle.h  ProtoRoute.h  ProtocolRoute.h  Service.cpp  Service.h  ServiceHandle.cpp  ServiceHandle.h  ServiceModule.cpp  ServiceModule.h
src/Timer/: TimerModule.cpp  TimerModule.h
struct/sql/: appear.sql  appearance.sql  command.sql  knapsack.sql  lottery.sql  player_cache.sql  state.sql
world/: test.cpp  world.cpp
world/include/: ByteArray.h  ConfigManager.h  Connection.h  ConnectionHandler.h  GameWorld.h  LogicConfig.h  LoginAuthenticator.h  LoginHandler.h  Package.h  PackageCodec.h  PackagePool.h  PlatformInfo.h  PlayerID.h  ProtocolHandler.h  ProtocolRoute.h  RepeatedTimer.h  ServerLogic.h  SubSystem.h  TSDeque.h  ThreadSafeDeque.h  UniqueID.h  actor.h  byte_array.h  common.h  config_manager.h  connection.h  connection_handler.h  game_world.h  logic_config.h  login_authenticator.h  login_handler.h  object.h  package.h  package_codec.h  package_pool.h  player_id.h  poolable.h  proto_handler.h  proto_route.h  protocol_handler.h  (+10 more)
world/include/impl/: Package.h  PackageCodec.h  PackageCodecImpl.h  default_codec.h  package.h  package_codec.h
world/include/reactor/: GlobalQueue.h  Reactor.h  TaskQueue.h  global_queue.h  reactor.h  task_queue.h
world/include/scene/: AbstractScene.h  BasePlayer.h  (+8 more)
world/source/: ByteArray.cpp  ConfigManager.cpp  Connection.cpp  ConnectionHandler.cpp  GameWorld.cpp  LoginAuthenticator.cpp  LoginHandler.cpp  PackagePool.cpp  ProtocolHandler.cpp  ProtocolRoute.cpp  RepeatedTimer.cpp  ServerLogic.cpp  SubSystem.cpp  UniqueID.cpp  byte_array.cpp  config_manager.cpp  connection.cpp  connection_handler.cpp  game_world.cpp  login_authenticator.cpp  login_handler.cpp  object.cpp  package_pool.cpp  poolable.cpp  proto_handler.cpp  proto_route.cpp  protocol_handler.cpp  protocol_route.cpp  recyclable.cpp  recycler.cpp  repeated_timer.cpp  server_logic.cpp  sub_system.cpp  unique_id.cpp  utils.cpp
(+116 files in other folders)
